--- a/app/views/business/donations/index.html.erb
+++ b/app/views/business/donations/index.html.erb
@@ -1,39 +1,61 @@
 <p id="notice"><%= notice %></p>
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Listing Business Donations</h1>
+    </div>
 
-<h1>Listing Business Donations</h1>
+    <ul class="nav">
+      <li class="nav-item">
+        <%= link_to 'New Donation', new_business_donation_path %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Download data in CSV format', business_donations_path(format: "csv") %> 
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Import data in CSV format', new_business_donations_import_path %> 
+      </li>
+    </ul>
 
-<table id="donations-table" class="table table-striped table-responsive table-hover">
-  <thead>
-    <tr>
-      <th>Transaction id </th>
-      <th>Amount </th>
-      <th>Donator </th>
-      <th>Date </th>
-      <th>Actions </th>
-    </tr>
-  </thead>
+    <table id="donations-table" class="table table-striped table-responsive table-hover">
+      <thead>
+        <tr>
+          <th>Transaction id </th>
+          <th>Amount </th>
+          <th>Donator </th>
+          <th>Date </th>
+          <th>Actions </th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @business_donations.each do |business_donation| %>
-      <tr>
-        <td> <%= business_donation.transaction_id %> </td>
-        <td> <%= business_donation.amount %> </td>
-        <td> <%= business_donation.donator.fullname %> </td>
-        <td> <%= business_donation.created_at %> </td>
-        <td>
-          <%= link_to 'Show', business_donation_path(business_donation), remote: true %> 
-          <%= link_to 'edit', edit_business_donation_path(business_donation) %> 
-          <%= link_to 'destroy', business_donation_path(business_donation), method: :delete, data: { confirm: 'are you sure?' } %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<br>
-<%= link_to 'New Donation', new_business_donation_path %>
-<br>
-<%= link_to 'Download data in CSV format', business_donations_path(format: "csv") %> 
-<br>
-<%= link_to 'Import data in CSV format', new_business_donations_import_path %> 
+      <tbody>
+        <% @business_donations.each do |business_donation| %>
+          <tr>
+            <td> <%= business_donation.transaction_id %> </td>
+            <td> <%= business_donation.amount %> </td>
+            <td> <%= business_donation.donator.fullname %> </td>
+            <td> <%= business_donation.created_at %> </td>
+            <td>
+              <div class="dropdown">
+                <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Actions <i class="fa fa-caret-down" aria-hidden="true"></i> 
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <li>
+                    <%= link_to 'Show', business_donation_path(business_donation), remote: true %> 
+                  </li>
+                  <li>
+                    <%= link_to 'edit', edit_business_donation_path(business_donation) %> 
+                  </li>
+                  <li>
+                    <%= link_to 'destroy', business_donation_path(business_donation), method: :delete, data: { confirm: 'are you sure?' } %>
+                  </li>
+                </ul>
+              </div>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <br>
 
- 
