--- a/app/views/business/donators/index.html.erb
+++ b/app/views/business/donators/index.html.erb
@@ -1,35 +1,55 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Business Donators</h1>
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Listing Business Donators</h1>
+    </div>
 
-<table id="donators-table" class="table table-striped table-responsive table-hover">
-  <thead>
-    <tr>
-      <th>Full name </th>
-      <th>Email  </th>
-      <th>Phone </th>
-      <th>Institution </th>
-      <th>Actions </th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @donators.each do |donator| %>
-      <tr>
-        <td> <%= donator.fullname %> </td>
-        <td> <%= donator.email %> </td>
-        <td> <%= donator.phone1 %> </td>
-        <td> <%= donator.institution %> </td>
-        <td>
-          <%= link_to 'Show', business_donator_path(donator), remote: true %> 
-          <%# <%= link_to 'destroy', business_donator_path(donator), method: :delete, data: { confirm: 'are you sure?' } %1> %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<br>
-<%= link_to 'New Donation', new_business_donation_path %>
-<br>
-<%= link_to 'Download data in CSV format', business_donators_path(format: "csv") %> 
-<br>
-<%= link_to 'Import data in CSV format', new_business_donators_import_path %> 
+    <ul class="nav">
+      <li class="nav-item">
+        <%= link_to 'New Donation', new_business_donation_path %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Download data in CSV format', business_donators_path(format: "csv") %> 
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Import data in CSV format', new_business_donators_import_path %> 
+      </li>
+    </ul>
+
+    <table id="donators-table" class="table table-striped table-responsive table-hover">
+      <thead>
+        <tr>
+          <th>Full name </th>
+          <th>Email  </th>
+          <th>Phone </th>
+          <th>Institution </th>
+          <th>Actions </th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @donators.each do |donator| %>
+          <tr>
+            <td> <%= donator.fullname %> </td>
+            <td> <%= donator.email %> </td>
+            <td> <%= donator.phone1 %> </td>
+            <td> <%= donator.institution %> </td>
+            <td>
+              <div class="dropdown">
+                <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Actions <i class="fa fa-caret-down" aria-hidden="true"></i> 
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <li>
+                    <%= link_to 'Show', business_donator_path(donator), remote: true %> 
+                  </li>
+                </ul>
+              </div>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
