--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,40 +1,64 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Dog Owners</h1>
-<table id="clients-table" >
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Email</th>
-      <th>Phone1</th>
-      <th>Phone2</th>
-      <th>Institution</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Listing Dogs Owners</h1>
+    </div>
 
-  <tbody>
-    <% @clients.each do |client| %>
-      <tr>
-        <td><%= client.first_name %></td>
-        <td><%= client.last_name %></td>
-        <td><%= client.email %></td>
-        <td><%= client.phone1 %></td>
-        <td><%= client.phone2 %></td>
-        <td><%= client.institution %></td>
-        <td><%= link_to 'Show', client, remote: true %>
-        <%= link_to 'Edit', edit_client_path(client) %>
-        <%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<br>
-<%= link_to 'New Client', new_client_path %>
-<br>
-<%= link_to 'Download data in CSV format', clients_path(format: "csv") %> 
-<br>
-<%= link_to 'Import data in CSV format', new_dogs_owners_import_path %> 
-
-
+    <ul class="nav">
+      <li class="nav-item">
+        <%= link_to 'New Client', new_client_path %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Download data in CSV format', clients_path(format: "csv") %> 
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Import data in CSV format', new_dogs_owners_import_path %> 
+      </li>
+    </ul>
+    <table id="clients-table" class="table table-striped table-responsive table-hover">
+      <thead>
+        <tr>
+          <th>First name</th>
+          <th>Last name</th>
+          <th>Email</th>
+          <th>Phone1</th>
+          <th>Phone2</th>
+          <th>Institution</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @clients.each do |client| %>
+          <tr>
+            <td><%= client.first_name %></td>
+            <td><%= client.last_name %></td>
+            <td><%= client.email %></td>
+            <td><%= client.phone1 %></td>
+            <td><%= client.phone2 %></td>
+            <td><%= client.institution %></td>
+            <td>
+              <div class="dropdown">
+                <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Actions <i class="fa fa-caret-down" aria-hidden="true"></i> 
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <li>
+                    <%= link_to 'Show', client, remote: true %>
+                  </li>
+                  <li>
+                    <%= link_to 'Edit', edit_client_path(client) %>
+                  </li>
+                  <li>
+                    <%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %>
+                  </li>
+                </ul>
+              </div>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
