--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,40 +1,67 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Dogs</h1>
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Listing Dogs</h1>
+    </div>
 
-<table id="dogs-table" class="table table-striped table-responsive table-hover">
-  <thead>
-    <tr>
-      <th>Name:</th>
-      <th>Chip id:</th>
-      <th>Age:</th>
-      <th>Breed:</th>
-      <th>Sex:</th>
-      <th>Actions:</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @dogs.each do |dog| %>
-      <tr>
-        <td> <%= dog.name %> </td>
-        <td> <%= dog.chip_id %> </td>
-        <td> <%= dog.age %> </td>
-        <td> <%= dog.breed %> </td>
-        <td> <%= dog.sex %> </td>
-        <td><%= link_to 'Show', dog_path(dog), remote: true %>
-        <%= link_to 'Edit', edit_dog_path(dog) %>
-        <%= link_to 'Destroy', dog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<br>
+    <ul class="nav">
+      <li class="nav-item">
+        <%= link_to 'New Dog', new_client_path %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Download data in CSV format', dogs_path(format: "csv") %> 
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Import data in CSV format', new_dogs_import_path %> 
+      </li>
+    </ul>
 
-<%= link_to 'New Dog', new_client_path %>
-<br>
-<%= link_to 'Download data in CSV format', dogs_path(format: "csv") %> 
-<br>
-<%= link_to 'Import data in CSV format', new_dogs_import_path %> 
+    <table id="dogs-table" class="table table-striped table-responsive table-hover">
+      <thead>
+        <tr>
+          <th>Name:</th>
+          <th>Chip id:</th>
+          <th>Age:</th>
+          <th>Breed:</th>
+          <th>Sex:</th>
+          <th>Actions:</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @dogs.each do |dog| %>
+          <tr>
+            <td> <%= dog.name %> </td>
+            <td> <%= dog.chip_id %> </td>
+            <td> <%= dog.age %> </td>
+            <td> <%= dog.breed %> </td>
+            <td> <%= dog.sex %> </td>
+            <td>
+              <div class="dropdown">
+                <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Actions <i class="fa fa-caret-down" aria-hidden="true"></i> 
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <li>
+                    <%= link_to 'Show', dog_path(dog), remote: true %>
+                  </li>
+                  <li>
+                    <%= link_to 'Edit', edit_dog_path(dog) %>
+                  </li>
+                  <li>
+                    <%= link_to 'Destroy', dog, method: :delete, data: { confirm: 'Are you sure?' } %>
+                  </li>
+                </ul>
+              </div>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+
+  </div>
+</div>
 
 <script>
 $(document).on("turbolinks:load", function(){
