--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,15 @@
-<h3><i class="fa fa-angle-right"></i> users#index</h3>
-<div class="row mt">
-  <div class="col-lg-12">
-    <table id="users-table" class="table table-hover">
+<p id="notice"><%= notice %></p>
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Listing Business Donations</h1>
+    </div>
+    <ul class="nav">
+      <li class="nav-item">
+        <%= if current_moderator.owner? then link_to 'New User', new_user_path end %> 
+        </li>
+    </ul>
+    <table id="users-table" class="table table-striped table-responsive table-hover">
       <thead>
         <tr>
           <th>Fullname</th>
@@ -17,17 +25,28 @@
             <td> <%= user.fullname %> </td>
             <td> <%= user.email %> </td>
             <td> <%= user.created_at %> </td>
-            <td> <%= user.location.full_street_address %> </td>
-            <td> <%= link_to "Edit", edit_user_path(user) %> 
-            <% unless user.owner? %>
-              <%=  link_to "Delete", user_path(user), method: 'delete' if current_moderator.owner? %> 
-            <% end %> 
+            <td> <%= user.location.full_street_address if user.location.present? %> </td>
+            <td>
+              <div class="dropdown">
+                <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Actions <i class="fa fa-caret-down" aria-hidden="true"></i> 
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <li>
+                    <%= link_to "Edit", edit_user_path(user) %> 
+                  </li>
+                  <% unless user.owner? %>
+                    <li>
+                      <%=  link_to "Delete", user_path(user), method: 'delete' if current_moderator.owner? %> 
+                    </li>
+                  <% end %> 
+                </ul>
+              </div>
             </td>
           </tr>
         <% end %> 
       </tbody>
     </table>
-    <br >
-    <%= if current_moderator.owner? then link_to 'New User', new_user_path end %> 
   </div>
+</div>
 </div>
