--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -6,6 +6,18 @@
       <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Listing Volunteers</h1>
     </div>
 
+    <ul class="nav">
+      <li class="nav-item">
+        <%= link_to 'New Volunteer', new_volunteer_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Download data in CSV format', volunteers_path(format: "csv"), class: "nav-link" %> 
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Import data in CSV format', new_volunteers_import_path, class: "nav-link" %> 
+      </li>
+    </ul>
+
     <table id="volunteers-table" class="table table-striped table-responsive table-hover">
       <thead>
         <tr>
@@ -17,7 +29,6 @@
           <th>Actions</th>
         </tr>
       </thead>
-
       <tbody>
         <% @volunteers.each do |volunteer| %>
           <tr>
@@ -30,32 +41,25 @@
 
               <div class="dropdown">
                 <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Actions 
+                  Actions <i class="fa fa-caret-down" aria-hidden="true"></i> 
                 </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <%= link_to 'Show', volunteer, remote: true, class: "dropdown-item" %>
-                  <%= link_to 'Edit', edit_volunteer_path(volunteer), class: "dropdown-item" %>
-                  <%= link_to 'Destroy', volunteer, method: :delete, data: { confirm: 'Are you sure?' }, class: "dropdown-item" %>
-                </div>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <li>
+                    <%= link_to 'Show', volunteer, remote: true, class: "dropdown-item" %>
+                  </li>
+                  <li>
+                    <%= link_to 'Edit', edit_volunteer_path(volunteer), class: "dropdown-item" %>
+                  </li>
+                  <li>
+                    <%= link_to 'Destroy', volunteer, method: :delete, data: { confirm: 'Are you sure?' }, class: "dropdown-item" %>
+                  </li>
+                </ul>
               </div>
 
             </td>
-
-
           </tr>
         <% end %>
       </tbody>
     </table>
-    <ul class="nav">
-      <li class="nav-item">
-        <%= link_to 'New Volunteer', new_volunteer_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Download data in CSV format', volunteers_path(format: "csv"), class: "nav-link" %> 
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Import data in CSV format', new_volunteers_import_path, class: "nav-link" %> 
-      </li>
-    </ul>
   </div>
 </div>
