--- a/app/views/volunteers_groups/index.html.erb
+++ b/app/views/volunteers_groups/index.html.erb
@@ -5,6 +5,11 @@
     <div class="white-header">
       <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Listing Volunteers Groups</h1>
     </div>
+    <ul class="nav"> 
+      <li class="nav-item">
+        <%= link_to 'New Volunteers group', new_volunteers_group_path, class: 'nav-link' %>
+      </li>
+    </ul>
 
     <table id="volunteers-group-table" class="table table-striped table-responsive table-hover">
       <thead>
@@ -20,19 +25,23 @@
           <tr>
             <td><%= volunteers_group.name %></td>
             <td><%= volunteers_group.description %></td>
-            <td><%= link_to 'Show', volunteers_group %>
-            <%= link_to 'Edit', edit_volunteers_group_path(volunteers_group) %>
-            <%= link_to 'Destroy', volunteers_group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td>
+              <div class="dropdown">
+                <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Actions <i class="fa fa-caret-down" aria-hidden="true"></i> 
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <li> <%= link_to 'Show', volunteers_group %> </li>
+                  <li> <%= link_to 'Edit', edit_volunteers_group_path(volunteers_group) %> </li>
+                  <li> <%= link_to 'Destroy', volunteers_group, method: :delete, data: { confirm: 'Are you sure?' } %> </li>
+                </ul>
+              </div>
+            </td>
           </tr>
         <% end %>
       </tbody>
     </table>
     <br>
-    <ul class="nav justify-content-end">
-      <li class="nav-item">
-        <%= link_to 'New Volunteers group', new_volunteers_group_path, class: 'nav-link' %>
-      </li>
-    </ul>
   </div>
 </div>
 
