Plutus::Entries controller removed

--- a/app/views/business/accounts/edit.html.erb
+++ b/app/views/business/accounts/edit.html.erb
@@ -1,2 +1,8 @@
-<h1>Business::Accounts#edit</h1>
-<p>Find me in app/views/business/accounts/edit.html.erb</p>
+<div class="row">
+
+  <div class="col-md-6">
+    <h1>Editing Account: <%= @account.name_was %></h1>
+
+    <%= render 'form' %>
+  </div>
+</div>
