--- a/app/views/business/accounts/new.html.erb
+++ b/app/views/business/accounts/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Business::Accounts#new</h1>
-<p>Find me in app/views/business/accounts/new.html.erb</p>
+<div class="row">
+
+  <div class="col-md-6">
+    <h1>Add Account</h1>
+
+    <%= render 'form' %>
+  </div>
+</div>
