--- a/app/assets/stylesheets/business/entries.sass
+++ b/app/assets/stylesheets/business/entries.sass
@@ -1,3 +1,3 @@
-// Place all the styles related to the Plutus::Entries controller here.
+// Place all the styles related to the Business::Entries controller here.
 // They will automatically be included in application.css.
 // You can use Sass here: http://sass-lang.com/
