--- a/app/views/business/accounts/index.html.erb
+++ b/app/views/business/accounts/index.html.erb
@@ -1,16 +1,16 @@
 <h1>Chart of Accounts</h1>
 
-<%= link_to new_account_path, class: 'btn btn-default' do %>
-  <%= glyphicon('plus') %> Add Account
+<%= link_to new_business_account_path, class: 'btn btn-default' do %>
+  <%= icon('plus') %> Add Account
 <% end %>
 
 <br><br>
 
 <ul class="nav nav-tabs" role="tablist">
-  <%= nav_action_link 'All Accounts', accounts_path %>
+  <%= nav_action_link 'All Accounts', business_accounts_path %>
 
   <% %w(assets liabilities equity expenses revenue).each do |account_type| %>
-    <%= nav_action_link account_type.titleize, send("#{account_type}_accounts_path") %>
+    <%= nav_action_link account_type.titleize, send("#{account_type}_business_accounts_path") %>
   <% end %>
 </ul>
 
@@ -29,16 +29,16 @@
     <% @accounts.each do |account| %>
       <tr>
         <td><%= account.code %></td>
-        <td><%= link_to account.name, account_path(account) %></td>
+        <td><%= link_to account.name, business_account_path(account) %></td>
         <td><%= account.type %></td>
         <td class='text-right'><%= account.balance %></td>
         <td class='text-right'>
-          <%= link_to account_path(account), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-xs btn-danger' do %>
-            <%= glyphicon('trash') %> Delete
+          <%= link_to business_account_path(account), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-xs btn-danger' do %>
+            <%= icon('trash') %> Delete
           <% end if account.deletable? %>
 
-          <%= link_to edit_account_path(account), class: 'btn btn-xs btn-primary' do %>
-            <%= glyphicon('edit') %> Edit
+          <%= link_to edit_business_account_path(account), class: 'btn btn-xs btn-primary' do %>
+            <%= icon('edit') %> Edit
           <% end %>
         </td>
       </tr>
