--- a/app/views/business/accounts/index.html.erb
+++ b/app/views/business/accounts/index.html.erb
@@ -1,47 +1,69 @@
-<h1>Chart of Accounts</h1>
+<p id="notice"><%= notice %></p>
 
-<%= link_to new_business_account_path, class: 'btn btn-default' do %>
-  <%= icon('plus') %> Add Account
-<% end %>
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Chart of Accounts</h1>
+    </div>
 
-<br><br>
+    <ul class="nav">
+      <li class="nav-item">
+        <%= link_to  'Add Account', new_business_account_path, remote: true, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Download data in CSV format', volunteers_path(format: "csv"), class: "nav-link" %> 
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Import data in CSV format', new_volunteers_import_path, class: "nav-link" %> 
+      </li>
+    </ul>
 
-<ul class="nav nav-tabs" role="tablist">
-  <%= nav_action_link 'All Accounts', business_accounts_path %>
+    <ul class="nav nav-tabs" role="tablist">
+      <%= nav_action_link 'All Accounts', business_accounts_path %>
+      <% %w(assets liabilities equities expenses revenues).each do |account_type| %>
+        <%= nav_action_link account_type.titleize, send("#{account_type}_business_accounts_path") %>
+      <% end %>
+    </ul>
 
-  <% %w(assets liabilities equity expenses revenue).each do |account_type| %>
-    <%= nav_action_link account_type.titleize, send("#{account_type}_business_accounts_path") %>
-  <% end %>
-</ul>
 
-<table id="accounts" class='table table-striped'>
-  <thead>
-    <tr>
-      <th>Code</th>
-      <th>Name</th>
-      <th>Type</th>
-      <th class='text-right'>Balance</th>
-      <th class='text-right'>Actions</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @accounts.each do |account| %>
-      <tr>
-        <td><%= account.code %></td>
-        <td><%= link_to account.name, business_account_path(account) %></td>
-        <td><%= account.type %></td>
-        <td class='text-right'><%= account.balance %></td>
-        <td class='text-right'>
-          <%= link_to business_account_path(account), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-xs btn-danger' do %>
-            <%= icon('trash') %> Delete
-          <% end if account.deletable? %>
-
-          <%= link_to edit_business_account_path(account), class: 'btn btn-xs btn-primary' do %>
-            <%= icon('edit') %> Edit
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <table id="volunteers-table" class="table table-striped table-responsive table-hover">
+      <thead>
+        <tr>
+          <th>Code</th>
+          <th>Name</th>
+          <th>Type</th>
+          <th class='text-right'>Balance</th>
+          <th class='text-right'>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @accounts.each do |account| %>
+          <tr>
+            <td><%= account.code %></td>
+            <td><%= link_to account.name, business_account_path(account) %></td>
+            <td><%= account.type %></td>
+            <td class='text-right'><%= account.balance %></td>
+            <td class='text-right'>
+              <div class="dropdown">
+                <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Actions <i class="fa fa-caret-down" aria-hidden="true"></i> 
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <li>
+                    <%= link_to 'Delete', business_account_path(account), 
+                      method: :delete, 
+                      data: { confirm: 'Are you sure?' },
+                      class: 'drop-item' if account.deletable? %>
+                </li>
+                <li>
+                  <%= link_to 'Edit', edit_business_account_path(account), remote: true, class: 'drop-item' %>
+                </li>
+                </ul>
+              </div>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
