Entries index pre-cleaned from pagination

--- a/app/views/application_partials/_asside.html.erb
+++ b/app/views/application_partials/_asside.html.erb
@@ -72,7 +72,7 @@
           </div>
           <div id="booking_submenu" class="panel-collapse collapse">
             <ul class="sub">
-              <li> <%= link_to "Calendar", events_path %> </li>
+              <li> <%= link_to "Accounts", business_accounts_path %> </li>
               <li> <%= link_to "List of events", business_donators_path %> </li>
             </ul>
           </div>
