--- a/app/views/business/entries/index.html.erb
+++ b/app/views/business/entries/index.html.erb
@@ -1,15 +1,15 @@
 <h1>Journal Entries</h1>
 
-<%= page_entries_info @entries unless @entries.out_of_range? %>
+<%# <%= page_entries_info @entries unless @entries.out_of_range? %1> %>
 
 <br>
 
-<%= link_to new_entry_path, class: 'btn btn-default' do %>
-  <%= glyphicon('plus') %> New Entry
+<%= link_to new_business_entry_path, class: 'btn btn-default' do %>
+  <%= icon('plus') %> New Entry
 <% end %>
 
 <div class='pull-right'>
-  <%= paginate @entries %>
+  <%# <%= paginate @entries %1> %>
 </div>
 
 <table class='table'>
@@ -33,8 +33,8 @@
 
       <% entry.debit_amounts.each do |amount| %>
         <tr>
-          <td><%= link_to amount.account.name, account_path(amount.account) %></td>
-          <td><%= link_to amount.account.code, account_path(amount.account) %></td>
+          <td><%= link_to amount.account.name, business_account_path(amount.account) %></td>
+          <td><%= link_to amount.account.code, business_account_path(amount.account) %></td>
           <td class='text-right'><%= amount.amount %></td>
           <td></td>
         </tr>
@@ -42,8 +42,8 @@
 
       <% entry.credit_amounts.each do |amount| %>
         <tr>
-          <td>&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to amount.account.name, account_path(amount.account) %></td>
-          <td><%= link_to amount.account.code, account_path(amount.account) %></td>
+          <td>&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to amount.account.name, business_account_path(amount.account) %></td>
+          <td><%= link_to amount.account.code, business_account_path(amount.account) %></td>
           <td></td>
           <td class='text-right'><%= amount.amount %></td>
         </tr>
@@ -60,7 +60,7 @@
 </table>
 
 <div class='pull-right'>
-  <%= paginate @entries %>
+  <%# <%= paginate @entries %1> %>
 </div>
 
-<%= page_entries_info @entries unless @entries.out_of_range? %>
+<%# <%= page_entries_info @entries unless @entries.out_of_range? %1> %>
