minor update to side menu

--- a/app/views/application_partials/_asside.html.erb
+++ b/app/views/application_partials/_asside.html.erb
@@ -6,7 +6,6 @@
       <div id="side_accordion" class="sidebar-menu sub-menu">
         <div class="panel">
           <div class="panel-heading">
-            <%# <a data-toggle="collapse" data-parent="#side_accordion" href="#dashboard_submenu"><i class="fa fa-desktop"></i>Dashboard</a> %> 
             <%= link_to "<i class='fa fa-desktop'></i> Dashbard".html_safe, dashboard_path %> 
           </div>
           <%# <div id="dashboard_submenu" class="panel-collapse collapse"> %>
@@ -19,7 +18,6 @@
         </div>
         <div class="panel">
           <div class="panel-heading">
-            <%# <a data-toggle="collapse" data-parent="#side_accordion" href="#volunteers_submenu"><i class="fa fa-users"></i>Volunteers</a> %> 
             <a data-toggle="collapse" data-parent="#side_accordion" href="#volunteers_submenu"> <%= icon('users') %> Volunteers</a> 
           </div>
           <div id="volunteers_submenu" class="panel-collapse collapse">
@@ -31,7 +29,6 @@
         </div>
         <div class="panel">
           <div class="panel-heading">
-            <%# <a data-toggle="collapse" data-parent="#side_accordion" href="#dogs_submenu"><i class="fa fa-paw"></i>Dogs</a> %> 
             <a data-toggle="collapse" data-parent="#side_accordion" href="#dogs_submenu"> <%= icon('paw') %> Dogs</a> 
           </div>
           <div id="dogs_submenu" class="panel-collapse collapse">
@@ -43,7 +40,6 @@
         </div>
         <div class="panel">
           <div class="panel-heading">
-            <%# <a data-toggle="collapse" data-parent="#side_accordion" href="#business_submenu"><i class="fa fa-handshake-o"></i>Business</a> %> 
             <a data-toggle="collapse" data-parent="#side_accordion" href="#business_submenu"> <%= icon('handshake-o') %> Business</a> 
           </div>
           <div id="business_submenu" class="panel-collapse collapse">
@@ -55,7 +51,6 @@
         </div>
         <div class="panel">
           <div class="panel-heading">
-            <%# <a data-toggle="collapse" data-parent="#side_accordion" href="#events_submenu"><i class="fa fa-calendar"></i>Events</a> %> 
             <a data-toggle="collapse" data-parent="#side_accordion" href="#events_submenu"> <%= icon('calendar') %> Events</a> 
           </div>
           <div id="events_submenu" class="panel-collapse collapse">
@@ -67,24 +62,21 @@
         </div>
         <div class="panel">
           <div class="panel-heading">
-            <%# <a data-toggle="collapse" data-parent="#side_accordion" href="#events_submenu"><i class="fa fa-calendar"></i>Accounting</a> %> 
             <a data-toggle="collapse" data-parent="#side_accordion" href="#booking_submenu"> <%= icon('book') %> Accounting</a> 
           </div>
           <div id="booking_submenu" class="panel-collapse collapse">
             <ul class="sub">
               <li> <%= link_to "Accounts", business_accounts_path %> </li>
-              <li> <%= link_to "List of events", business_donators_path %> </li>
+              <li> <%= link_to "Entries Journal", business_entries_path %> </li>
             </ul>
           </div>
         </div>
         <div class="panel">
           <div class="panel-heading">
-            <%# <a data-toggle="collapse" data-parent="#side_accordion" href="#logs_submenu"><i class="fa fa-gears"></i>Settings</a> %> 
             <a data-toggle="collapse" data-parent="#side_accordion" href="#logs_submenu"> <%= icon('gears') %> Settings</a> 
           </div>
           <div id="logs_submenu" class="panel-collapse collapse">
             <ul class="sub">
-
               <% if current_moderator.owner? %>
                 <li> <%= link_to "All Users", users_path %> </li>
               <% end %> 
