Kaminar added plus styles for entries and accounts

--- a/app/assets/stylesheets/business/entries.sass
+++ b/app/assets/stylesheets/business/entries.sass
@@ -1,3 +1,11 @@
-// Place all the styles related to the Business::Entries controller here.
-// They will automatically be included in application.css.
-// You can use Sass here: http://sass-lang.com/
+#entries-panel
+  padding-bottom: 110px
+
+#entries-journal-table
+  text-align: left
+  
+.clear-table-hover
+  background-color: #fff !important
+
+.paginate_button
+  color: initial !important
