--- a/app/assets/stylesheets/style-theme.sass
+++ b/app/assets/stylesheets/style-theme.sass
@@ -842,7 +842,7 @@ ul.top-menu > li > a
       background-color: #eee
       text-shadow: 0 1px 0 rgba(1,1,1,.2)
       padding-right: 50px
-      padding-left: 25px
+      padding-left: 50px
 
       &:hover
         color: $turq !important
@@ -962,7 +962,7 @@ table.dataTable.no-footer
 /*White Panel
 
 .white-panel
-  text-align: center
+  text-align: left
   background: #ffffff
   height: 100%
   padding: 50px 50px 40px 
