--- a/app/assets/stylesheets/business/accounts.sass
+++ b/app/assets/stylesheets/business/accounts.sass
@@ -1,3 +1,5 @@
-// Place all the styles related to the Business::Accounts controller here.
-// They will automatically be included in application.css.
-// You can use Sass here: http://sass-lang.com/
+#account-table
+  width: 100%
+  text-align: center
+  th
+    text-align: center
