--- a/app/views/business/accounts/show.html.erb
+++ b/app/views/business/accounts/show.html.erb
@@ -5,7 +5,7 @@
     <div class="white-header">
       <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> <%= @account.type %> Account: <%= @account.name %></h1>
     </div>
-    
+
     <ol class="breadcrumb">
       <li><%= link_to "Accounts", business_accounts_path %></li>
       <li><%= link_to @account.type.pluralize, business_account_path(@account.type.pluralize.parameterize) %></a></li>
@@ -14,7 +14,7 @@
 
     <ul class="nav">
       <li class="nav-item">
-        <%= link_to 'New Volunteer', new_volunteer_path, class: "nav-link" %>
+        <%= link_to 'New Account', new_business_account_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to 'Download data in CSV format', volunteers_path(format: "csv"), class: "nav-link" %> 
@@ -24,8 +24,8 @@
       </li>
     </ul>
 
-    <h1></h1>
-    <table id="volunteers-table" class="table table-striped table-responsive table-hover">
+    <h3>Summary</h3>
+    <table id="account-table" class="table-striped table-responsive table-hover">
       <thead>
         <tr>
           <th>Code</th>
@@ -47,13 +47,20 @@
           <td><%= @account.last_transaction_date %></td>
           <td><%= @account.balance %></td>
           <td>
-            <%= link_to business_account_path(@account), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' do %>
-              <%= icon('trash') %> Delete
-              <% end if @account.deletable? %>
+            <div class="dropdown">
+              <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Actions <i class="fa fa-caret-down" aria-hidden="true"></i> 
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <li>
+                  <%= link_to 'Delete', business_account_path(@account), method: :delete, data: { confirm: 'Are you sure?' }, class: 'dropdown-item' if @account.deletable? %>
+                </li>
+                <li>
+                  <%= link_to 'Edit', edit_business_account_path(@account), class: 'dropdown-item' %>
+                </li>
+              </ul>
+            </div>
 
-              <%= link_to edit_business_account_path(@account), class: 'btn btn-sm btn-primary' do %>
-                <%= icon('edit') %> Edit
-              <% end %>
           </td>
         </tr>
       </tbody>
@@ -63,7 +70,7 @@
     <% if @account.amounts.empty? %>
       There are no transactions in this account.
     <% else %>
-      <table id="volunteers-table" class="table table-striped table-responsive table-hover">
+      <table id="transactions-table" class="table table-striped table-responsive table-hover">
         <thead>
           <tr>
             <th>Date</th>
