--- a/app/views/business/entries/edit.html.erb
+++ b/app/views/business/entries/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @entry %> |
-<%= link_to 'Back', entries_path %>
+<%= link_to 'Show', business_entry_path(:id) %> |
+<%= link_to 'Back', business_entries_path %>
