--- a/app/views/business/entries/index.html.erb
+++ b/app/views/business/entries/index.html.erb
@@ -1,60 +1,67 @@
-<h1>Journal Entries</h1>
-<br>
 
-<%= link_to new_business_entry_path, class: 'btn btn-default' do %>
-  <%= icon('plus') %> New Entry
-<% end %>
+<p id="notice"><%= notice %></p>
 
+<div class="tables-wrapper">
+  <div id="entries-panel" class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Journal Entries</h1>
+    </div>
+
+    <ul class="nav">
+      <li class="nav-item">
+        <%= link_to 'New Entry', new_business_entry_path, class: "nav-link" %>
+      </li>
+    </ul>
+
+
+    <table id="entries-journal-table" class="table table-striped table-responsive table-hover">
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Account</th>
+          <th>Code</th>
+          <th class='text-right'>Debit</th>
+          <th class='text-right'>Credit</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @entries.each do |entry| %>
+          <tr class="clear-table-hover">
+            <td rowspan=<%= entry.table_rows %> >
+              <%= entry.date %>
+            </td>
+          </tr>
+
+          <% entry.debit_amounts.each do |amount| %>
+            <tr>
+              <td><%= link_to amount.account.name, business_account_path(amount.account) %></td>
+              <td><%= link_to amount.account.code, business_account_path(amount.account) %></td>
+              <td class='text-right'><%= amount.amount %></td>
+              <td></td>
+            </tr>
+          <% end %>
+
+          <% entry.credit_amounts.each do |amount| %>
+            <tr>
+              <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to amount.account.name, business_account_path(amount.account) %></td>
+              <td><%= link_to amount.account.code, business_account_path(amount.account) %></td>
+              <td></td>
+              <td class='text-right'><%= amount.amount %></td>
+            </tr>
+          <% end %>
+
+          <% if entry.description %>
+            <tr>
+              <td><strong><%= entry.description(50) %></strong></td>
+              <td colspan='3'></td>
+            </tr>
+          <% end %>
+        <% end %>
+      </tbody>
+    </table>
 <div class='pull-right'>
+  <%= paginate @entries %> 
 </div>
-
-<table class='table'>
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Account</th>
-      <th>Code</th>
-      <th class='text-right'>Debit</th>
-      <th class='text-right'>Credit</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @entries.each do |entry| %>
-      <tr>
-        <td rowspan=<%= entry.table_rows %>>
-          <%= entry.date %>
-        </td>
-      </tr>
-
-      <% entry.debit_amounts.each do |amount| %>
-        <tr>
-          <td><%= link_to amount.account.name, business_account_path(amount.account) %></td>
-          <td><%= link_to amount.account.code, business_account_path(amount.account) %></td>
-          <td class='text-right'><%= amount.amount %></td>
-          <td></td>
-        </tr>
-      <% end %>
-
-      <% entry.credit_amounts.each do |amount| %>
-        <tr>
-          <td>&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to amount.account.name, business_account_path(amount.account) %></td>
-          <td><%= link_to amount.account.code, business_account_path(amount.account) %></td>
-          <td></td>
-          <td class='text-right'><%= amount.amount %></td>
-        </tr>
-      <% end %>
-
-      <% if entry.description %>
-        <tr>
-          <td><strong><%= entry.description(50) %></strong></td>
-          <td colspan='3'></td>
-        </tr>
-      <% end %>
-    <% end %>
-  </tbody>
-</table>
-
-<div class='pull-right'>
+  </div>
 </div>
-
