gem groupby added and charts prototype implemented

--- a/app/assets/stylesheets/_partials.sass
+++ b/app/assets/stylesheets/_partials.sass
@@ -15,7 +15,8 @@ $gray-mid: #aeb2b7
 $gray-light: #ddd
 $yell-dark: #c9aa5f
 $yell-light: #ffd777
-$turq: #68dff0
+// $turq: #68dff0
+$turq: #A7D24A 
 
 //breaks
 $xsmall: 575px
