Third quarter of charts done

--- a/app/assets/stylesheets/asside.sass
+++ b/app/assets/stylesheets/asside.sass
@@ -47,5 +47,8 @@ ul.sidebar-menu
           padding: 5px 0 5px 25px
           &:hover
             background-color: darken($turq, 25%)
-
-
+  .logo-asside
+    display: block
+    margin: 75px auto 5px auto
+    width: 70%
+    
