--- a/app/assets/stylesheets/stats.sass
+++ b/app/assets/stylesheets/stats.sass
@@ -1,3 +1,48 @@
-// Place all the styles related to the Stats controller here.
-// They will automatically be included in application.css.
-// You can use Sass here: http://sass-lang.com/
+.stat-panel
+  height: 100%
+.goright
+  padding-right: 30px
+.stats-info
+  h3
+    margin: 15px 15px 0
+    // font-size: 16px
+  .small
+    font-size: 12px
+    margin-top: 3px
+
+div.stat-panel.pn
+  box-shadow: 0 0px 1px rgba(0, 0, 0, 0.12), 0 0px 1px rgba(0, 0, 0, 0.24) !important
+
+.chart-wrapper
+  
+.volunteers-groups-stats-wrapper
+  padding: 60px 105px
+  margin-bottom: 70px
+  h4
+    margin-bottom: 25px
+    padding: 5px
+
+table
+  width: 100%
+  font-size: 13px
+  th
+    text-transform: uppercase
+  td, th
+    padding: 5px
+
+.stats-controls
+  padding: 0px
+  height: 20px
+  border-radius: 0
+.stats-controls.btn-default
+  padding: 0 9px
+  text-transform: uppercase
+  font-weight: initial
+.stats-controls-label
+  font-weight: bold !important
+  padding: 10px 3px 10px 10px
+  text-transform: uppercase
+.stats-controls-wrapper
+  margin-top: 20px
+  margin-left: 95px
+
