--- a/app/assets/stylesheets/style-responsive-theme.sass
+++ b/app/assets/stylesheets/style-responsive-theme.sass
@@ -1,3 +1,4 @@
+
 @media (min-width: 980px)
   /*-----
 
@@ -17,6 +18,9 @@
     position: absolute
 
   /*sidebar
+
+  #logo-link
+    display: none
 
   #sidebar
     height: auto
