--- a/app/views/application_partials/_asside.html.erb
+++ b/app/views/application_partials/_asside.html.erb
@@ -1,11 +1,9 @@
 <aside>
   <div id="sidebar"  class="nav-collapse ">
     <!-- sidebar menu start-->
-    <ul class="sidebar-menu" id="nav-accordion">
-
-      <%= link_to image_tag('logo-asside', size: 32), root_path %> 
+      <%= link_to image_tag('logo-asside2', class: 'logo-asside'), root_path, id: 'logo-link'%> 
       <br>
-
+    <ul class="sidebar-menu" id="nav-accordion">
       <div id="side_accordion" class="sidebar-menu sub-menu">
         <div class="panel">
           <div class="panel-heading">
@@ -63,18 +61,14 @@
           <div id="booking_submenu" class="panel-collapse collapse">
             <ul class="sub">
               <li> <%= link_to "Accounts", business_accounts_path %> </li>
+              <li> <%= link_to "General Ledger", business_general_ledger_index_path %> </li>
               <li> <%= link_to "Entries Journal", business_entries_path %> </li>
             </ul>
           </div>
         </div>
         <div class="panel">
           <div class="panel-heading">
-            <a data-toggle="collapse" data-parent="#side_accordion" href="#logs_submenu"> <%= icon('line-chart') %> Statistics</a> 
-          </div>
-          <div id="logs_submenu" class="panel-collapse collapse">
-            <ul class="sub">
-              <li> <%= link_to "All Charts", stats_path %> </li>
-            </ul>
+            <%= link_to "<i class='fa fa-line-chart'></i> Statistics".html_safe, accounts_stats_path %>
           </div>
         </div>
         <div class="panel">
@@ -90,8 +84,6 @@
           </div>
         </div>
       </div> 
-
-
       <!-- sidebar menu end-->
     </ul>
   </div>
