--- a/app/assets/stylesheets/_partials.sass
+++ b/app/assets/stylesheets/_partials.sass
@@ -41,3 +41,28 @@ html, body, ul, ol
 
 .btn-default
   +border-radius
+
+.col-xs-15, .col-sm-15, .col-md-15, .col-lg-15
+  position: relative
+  min-height: 1px
+  padding-right: 10px
+  padding-left: 10px
+
+.col-xs-15
+  width: 20%
+  float: left
+
+@media screen and (min-width: $small )
+  .col-sm-15
+    width: 20%
+    float: left
+
+@media screen and (min-width: $medium )
+  .col-md-15
+    width: 20%
+    float: left
+
+@media screen and (min-width: $large )
+  .col-lg-15
+    width: 20%
+    float: left
