--- a/app/assets/stylesheets/dashboard.sass
+++ b/app/assets/stylesheets/dashboard.sass
@@ -17,9 +17,16 @@
 #center-dashboard
   .row
     margin-right: -5px
+  .white-panel
+    padding: 0
+  .white-header
+    margin: 0
 
 #right-sidebar-dashboard
-  height: 100%
+  height: 86vh
 
 .mt
   margin-right: 5px
+
+.chart-dash
+  position: relative
