--- a/app/views/business/donations/_show.html.erb
+++ b/app/views/business/donations/_show.html.erb
@@ -12,32 +12,45 @@
                   </div>
                 </div>
                 <div class="row content">
+
                   <div class="col-md-12">
+                    <div class="panel panel-default">
+                      <!-- Default panel contents -->
+                      <div class="panel-heading"><h4> Donation Details </h4></div>
+                      <div class="panel-body">
+                        <h3> Donation Details </h3>
+                        <p> <strong>Transaction id:</strong> <%= @business_donation.transaction_id %> </p>
+                        <p> <strong>Amount:</strong> <%= @business_donation.amount %> </p>
+                        <p> <strong>Date:</strong> <%= @business_donation.created_at %> </p>
+                      </div>
 
-                    <h3> Donation Details </h3>
-                    <p> <strong>Transaction id:</strong> <%= @business_donation.transaction_id %> </p>
-                    <p> <strong>Amount:</strong> <%= @business_donation.amount %> </p>
-                    <p> <strong>Date:</strong> <%= @business_donation.created_at %> </p>
-                    
-                    <h3> Donator Details </h3>
-                    <p> <strong>First name:</strong> <%= @donator.first_name %> </p>
-                    <p> <strong>Last name:</strong> <%= @donator.last_name %> </p>
-                    <p> <strong>Email:</strong> <%= @donator.email %> </p>
-                    <p> <strong>Phone1:</strong> <%= @donator.phone1 %> </p>
-                    <p> <strong>Phone2:</strong> <%= @donator.phone2 %> </p>
-                    <p> <strong>Address:</strong> <%= @donator.location.full_street_address %> </p>
-                    <p> <strong>Coordinates:</strong> <%= @donator.location.latitude %> <%= @donator.location.longitude %> </p>
+                      <!-- Table -->
+                    </div>
+                  </div>
 
-                    <p> 
-                      <%= link_to 'Edit', edit_business_donation_path(@business_donation), class: "closeDonationShowModal" %> 
-                      | <%= link_to 'Back', business_donations_path, class: "closeDonationShowModal" %>
-                    </p>
-                    <br />
+                  <div class="col-md-12">
+                    <div class="panel panel-default">
+                      <!-- Default panel contents -->
+                      <div class="panel-heading"><h4> Donator Details </h4></div>
+                      <div class="panel-body">
+                        <p> <strong>First name:</strong> <%= @donator.first_name %> </p>
+                        <p> <strong>Last name:</strong> <%= @donator.last_name %> </p>
+                        <p> <strong>Email:</strong> <%= @donator.email %> </p>
+                        <p> <strong>Phone1:</strong> <%= @donator.phone1 %> </p>
+                        <p> <strong>Phone2:</strong> <%= @donator.phone2 %> </p>
+                        <p> <strong>Address:</strong> <%= @donator.location.full_street_address %> </p>
+                        <p> <strong>Coordinates:</strong> <%= @donator.location.latitude %> <%= @donator.location.longitude %> </p>
+                      </div>
+
+                      <!-- Table -->
+                    </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-sm-12">
                     <button type="button" class="closeDonationShowModal btn btn-default">close</button>
+                    <%= link_to 'Edit', edit_business_donation_path(@business_donation), class: "closeDonationShowModal btn btn-default" %> 
+                    <%= link_to 'Back', business_donations_path, class: "closeDonationShowModal btn btn-default" %>
                   </div>
                 </div>
               </div>
