Suppose charts finished

--- a/app/views/stats/accounts.html.erb
+++ b/app/views/stats/accounts.html.erb
@@ -5,11 +5,9 @@
         <div class="row">
           <div class="col-sm-6 col-xs-6">
             <div class="stats-info">
-              <p>Accounts</p>
+              <h3>Accounts</h3>
               <p class="small"> <%= date %> </p>
             </div>
-          </div>
-          <div class="col-sm-6 col-xs-6 goright">
           </div>
         </div>
       </div>
@@ -18,14 +16,10 @@
       <div class="row">
         <div class="col-md-7 ">
           <div class="stats-controls-wrapper">
-            <%= form_tag '/stats/volunteers', method: :get, class: 'form-inline ' do  %>
+            <%= form_tag '/stats/accounts', method: :get, class: 'form-inline ' do  %>
               <div class="form-group">
-                <%= label_tag :period, 'period', class: 'stats-controls-label' %> 
-                <%= select_tag :period, options_for_select(%w[month quarter year], params[:period]), class: 'stats-controls form-control' %> 
-              </div>
-              <div class="form-group">
-                <%= label_tag :last, 'time span', class: 'stats-controls-label' %> 
-                <%= select_tag :last, options_for_select(%w[12 6 3], params[:last]), class: 'stats-controls form-control' %> 
+                <%= label_tag :accounts_group, 'Accounts Group', class: 'stats-controls-label' %> 
+                <%= select_tag :accounts_group, options_for_select(%w[Assets Liabilities Equities Revenues Expenses], params[:accounts_group]), class: 'stats-controls form-control' %> 
               </div>
               <div class="form-group">
                 <%= label_tag :redraw, 'redraw chart', class: 'stats-controls-label' %> 
@@ -37,19 +31,6 @@
       </div>
       <%# Navigation End %>
 
-      <div class="row">
-        <div class="col-md-15">
-          <%# <%= area_chart Plutus::Asset.group_by_monthg  %1> %> 
-        </div>
-        <div class="col-md-15">
-        </div>
-        <div class="col-md-15">
-        </div>
-        <div class="col-md-15">
-        </div>
-        <div class="col-md-15">
-        </div>
-      </div>
+      <%= render "accounts_stats", name: params[:accounts_group], accounts: @data %>
     </div>
   </div>
-</div>
