--- a/app/views/stats/donations.html.erb
+++ b/app/views/stats/donations.html.erb
@@ -40,8 +40,8 @@
       <div class="row">
         <div class="col-md-12">
           <div class="volunteers-groups-stats-wrapper">
-            <h4>Groups Summary</h4>
-            <table class="table-striped">
+            <h4>Highest Donations</h4>
+            <table class="table table-striped table-hover">
               <thead>
                 <tr>
                   <th>No.</th>
@@ -52,7 +52,7 @@
               <tbody>
                 <% @highest_donations.each_with_index do |donation, index| %> 
                   <tr>
-                    <td>index</td>
+                    <td> <%= index+1 %> </td>
                     <td> <%= link_to donation.donator.fullname, business_donator_path(donation.donator), remote: true %> </td>
                     <td> <%= donation.amount.round(2) %> </td>
                   </tr>
