--- a/app/views/stats/volunteers.html.erb
+++ b/app/views/stats/volunteers.html.erb
@@ -45,7 +45,7 @@
         <div class="col-md-12">
           <div class="volunteers-groups-stats-wrapper">
             <h4>Groups Summary</h4>
-            <table class="table-striped">
+            <table class="table table-striped table-hover">
               <thead>
                 <tr>
                   <th>Group name</th>
